@@ -22,8 +22,6 @@
 			$className = $class->getName();
 			$varName = strtolower($className[0]).substr($className, 1);
 
-			$tabs = "\t\t\t";
-
 			$setters = array();
 			
 			$standaloneFillers = array();
@@ -44,16 +42,14 @@
 					&& !$property->isRequired()
 				)
 					$standaloneFillers[] =
-						$tabs
-						.implode(
-							"\n{$tabs}",
+						implode(
+							"\n",
 							explode("\n", $filler)
 						);
 				else
 					$chainFillers[] =
-						"{$tabs}\t"
-						.implode(
-							"\n{$tabs}\t",
+						implode(
+							"\n",
 							explode("\n", $filler)
 						);
 			}
@@ -71,29 +67,29 @@ EOT;
 			) {
 				$out .= <<<EOT
 			
-		public function makeObject(&\$array, \$prefix = null)
-		{
-			return \$this->fillObject(new {$className}(), \$array, \$prefix);
-		}
+public function makeObject(&\$array, \$prefix = null)
+{
+	return \$this->fillObject(new {$className}(), \$array, \$prefix);
+}
 
 EOT;
 			} else {
 				$out .= <<<EOT
 				
-		// there is no makeObject because of abstract nature of meta-class
+// there is no makeObject because of abstract nature of meta-class
 				
 EOT;
 			}
 			
 			$out .= <<<EOT
 
-		protected function fillObject(/* {$className} */ \${$varName}, &\$array, \$prefix = null)
-		{
+protected function fillObject(/* {$className} */ \${$varName}, &\$array, \$prefix = null)
+{
 
 EOT;
 			if ($class->getParent()) {
 				$out .= <<<EOT
-			parent::fillObject(\${$varName}, \$array, \$prefix);
+parent::fillObject(\${$varName}, \$array, \$prefix);
 
 
 EOT;
@@ -101,7 +97,7 @@ EOT;
 			
 			if ($chainFillers) {
 				
-				$out .= "{$tabs}\${$varName}->\n";
+				$out .= "\${$varName}->\n";
 				
 				$out .= implode("->\n", $chainFillers).";\n\n";
 			}
@@ -123,32 +119,30 @@ EOT;
 		protected static function buildPointers(MetaClass $class)
 		{
 			return <<<EOT
-		public function getTable()
-		{
-			return '{$class->getDumbName()}';
-		}
-		
-		public function getObjectName()
-		{
-			return '{$class->getName()}';
-		}
-		
-		public function getSequence()
-		{
-			return '{$class->getDumbName()}_id';
-		}
+public function getTable()
+{
+	return '{$class->getDumbName()}';
+}
+
+public function getObjectName()
+{
+	return '{$class->getName()}';
+}
+
+public function getSequence()
+{
+	return '{$class->getDumbName()}_id';
+}
 EOT;
 		}
 		
 		protected static function buildMapping(MetaClass $class, $indent = 3)
 		{
-			$tabs = str_pad(null, $indent, "\t", STR_PAD_LEFT);
-			
 			$mapping = array();
 			
 			foreach ($class->getProperties() as $property) {
 				
-				$row = $tabs;
+				$row = null;
 				
 				if ($property->getType()->isGeneric()) {
 					
